--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,29 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-primary-dark: #013b5d;
+  --color-primary: #2387c0;
+  --color-primary-light: #5ebbee;
+  --color-primary-lightE: #bddbeb;
+  /* texts */
+  --color-lightly: #c4c4c4;
+  --color-darkly: #242527;
+  /* Linear */
+  --color-from: #404040;
+  --color-to: #222222;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+button {
+  cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+._ {
+  color: #013b5d;
+  color: #2488c2;
+  color: #5ebbee;
+  color: #bddbeb;
+  color: #c4c4c4;
+  color: #242527;
+  color: #3b3b3b;
+  color: #222222;
 }
